2013-11-13  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-issues-and-workarounds.txt,
	man/manpage-common-workaround-outofband-15-text.man: Document
	workaround for Quanta Winterfell.
	
2013-10-30  Denys Vlasenko <dvlasenk@redhat.com>

	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_rmcpplus_check_rakp_4_integrity_check_value):
	Fix incorrect secure memset call.
	
2013-10-29  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_3_3

2013-10-23  Denys Vlasenko <dvlasenk@redhat.com>

	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_calculate_sik): Fix
	big endian bug.
	
2013-09-24  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Add note about very verbose output.
	
2013-09-23  Albert Chu <chu11@llnl.gov>
	
	* libfreeipmi/sel/ipmi-sel-string.c (_output_oem_record_data):
	Output record type under verbose mode.
	(Feature recommended by Rob Swindell - swindell at broadcom dot
	com).

2013-09-13  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-cmd-oem-spec.h: Fix
	invalid hex for
	IPMI_CMD_OEM_INTEL_NODE_MANAGER_SET_NODE_MANAGER_ALERT_DESTINATION
	and
	IPMI_CMD_OEM_INTEL_NODE_MANAGER_GET_NODE_MANAGER_ALERT_DESTINATION.

	* ipmi-oem/: Enable support of IntelNM
	get-node-manager-alert-destination and
	set-node-manager-alert-destination.
	
2013-09-10  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_3_2
	
2013-08-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/api/ipmi-api.h: Document mapping of
	IPMI completion codes and RMCPPlus codes to API error codes.

	* Update freeipmi libraries/tools to check/use API error codes
	correctly.
	
2013-08-27  Albert Chu <chu11@llnl.gov>

	Merge branch configcollapse.

	* ipmi-config/: New tool.

	* bmc-config/, ipmi-pef-config/, ipmi-sensors-config/,
	ipmi-chassis-config/: Remove tools.

	* common/configtool/: Remove common files. 

	* common/toolcommon/: Update config file parsing to recognize